objects/vlocity_ins__Party__c.object
<CustomObject>
    <description>A party is an individual, business, government entity, household, association, or other entity represented by one or more individuals. In Vlocity applications, each account, contact, and household tracked in the system is also tracked as a party.
The party object holds minimal information, but extends Salesforce to support business-to-consumer (B2C) and business-to-business-to-consumer (B2B2C) practices in addition to business-to-business (B2B) practices.</description>
    <fields>
        <fullName>vlocity_ins__AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the primary Account identified as this Party when the party is an Account. Where possible use Account.PartyId__c instead of this field to determine the Party which identifies any given Account.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Party</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the primary Contact identified as this Party when the party is a Contact. Where possible use Contact.PartyId__c instead of this field to determine the Party which identifies any given Contact.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Party</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__HouseholdId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the primary Household identified as this Party when the party is a Household. Where possible use Household.PartyId__c instead of this field to determine the Party which identifies any given Household.</description>
        <label>Household</label>
        <referenceTo>vlocity_ins__Household__c</referenceTo>
        <relationshipName>Party</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsAccountIdMismatch__c</fullName>
        <description>Formula: True if the AccountId value of this Party record is different from the PartyEntityId value. Used in certain corner cases to repair the Party record.</description>
        <formula>If(vlocity_ins__AccountId__c!=null &amp;&amp; vlocity_ins__PartyEntityId__c !=null &amp;&amp; vlocity_ins__PartyEntityId__c != CASESAFEID(vlocity_ins__AccountId__c), true, false)</formula>
        <label>Is Account Id Mismatch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsContactIdMismatch__c</fullName>
        <description>Formula: True if the ContactId value of this Party record is different from the PartyEntityId value. Used in certain corner cases to repair the Party record.</description>
        <formula>If(vlocity_ins__PartyEntityId__c != null &amp;&amp; vlocity_ins__ContactId__c!=null &amp;&amp; vlocity_ins__PartyEntityId__c != CASESAFEID(vlocity_ins__ContactId__c), true, false)</formula>
        <label>Is Contact Id Mismatch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsPersonAccount__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this Party is identified as a Person Account.</description>
        <label>Is Person Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Location__c</fullName>
        <description>Formula: The value of the Contact.Location__c (Region) field if this party is a Contact.</description>
        <formula>IF(vlocity_ins__PartyEntityType__c ==&apos;Contact&apos;,  vlocity_ins__ContactId__r.vlocity_ins__Location__c,
IF(vlocity_ins__PartyEntityType__c ==&apos;Household&apos; || vlocity_ins__PartyEntityType__c ==&apos;Group&apos; || vlocity_ins__PartyEntityType__c ==&apos;Account&apos; , &quot;&quot;, &quot;&quot;))</formula>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OwnerName__c</fullName>
        <description>Formula: The alias of the owner user for the associated Account, Contact or Household.</description>
        <formula>vlocity_ins__HouseholdId__r.Owner:User.Alias &amp;  vlocity_ins__AccountId__r.Owner.Alias &amp;  vlocity_ins__ContactId__r.Owner.Alias</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PartyEntityId__c</fullName>
        <description>This field is used internally to store Ids from different objects. If the party type is contact, this field stores Contact.Id, if it is household, it stores Household__c.Id. Used to provide a link to the source record.</description>
        <label>Party Entity Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PartyEntityName__c</fullName>
        <description>Formula: The Name from this Party record.</description>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Party Entity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PartyEntityType__c</fullName>
        <description>The type of party such as Account or Contact.</description>
        <label>Party Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PartyNumber__c</fullName>
        <description>An external or cross-system identifier for this Party such as one provided by a customer data hub or customer information file.</description>
        <externalId>true</externalId>
        <label>Party Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RelationshipGroup__c</fullName>
        <description>Relationship group identifier.</description>
        <label>Relationship Group</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Party</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Party Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Parties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>